manifests/camera-0.2.5.tgz-manifest.yaml
---
# Source: camera/templates/service.yaml
# Giles Study Camera Service
apiVersion: v1
kind: Service
metadata:
  name: 
  labels:
    app: 
    app.kubernetes.io/name: camera
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: camera-0.2.5
spec:
  type: ClusterIP
  ports:
    - name: rtsp
      port: 554
      targetPort: 554
      protocol: TCP
  selector:
    app:
---
# Source: camera/templates/service.yaml
# Giles Study Camera HLS 
apiVersion: v1
kind: Service
metadata:
  name: hls-
  labels:
    app: 
    app.kubernetes.io/name: camera
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: camera-0.2.5
spec:
  type: ClusterIP
  ports:
    - name: hls
      port: 8888
      targetPort: 8888
      protocol: TCP
  selector:
    app:
---
# Source: camera/templates/deployment.yaml
# Giles Study Camera
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 
  labels:
    app.kubernetes.io/name: camera
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: camera-0.2.5
    app: 
spec:
  selector:
    matchLabels:
      app: 
  template:
    metadata:
      labels:
        app: 
    spec:
      containers:
        - name: rtsp-server
          image: "ciscolabs/rtsp-server:latest"
          imagePullPolicy: IfNotPresent
        - name: rtsp-client
          image: "ciscolabs/rtsp-client:latest"
          imagePullPolicy: IfNotPresent
          command: ["ffmpeg"]
          args: ["-rtsp_transport", "tcp", "-i", "", "-an", "-c:v", "copy", "-f", "rtsp", "rtsp://0.0.0.0:554/"]
        - name: msm-rtsp-stub
          image: "ghcr.io/media-streaming-mesh/msm-rtsp-stub:latest"
          imagePullPolicy: IfNotPresent
---
# Source: camera/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: camera
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: camera-0.2.5
  name: 
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: hls-
            port:
              number: 8888
        path: "/"
        pathType: Prefix
